--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@
 
 
 /* header */
-#branding .container {
-
+#branding-inner {
+	background-color: #000;
 }
 
 /* header title (Man via Machine) */
@@ -26,5 +26,23 @@
 	float: right;
 	font-family: 'Tangerine', serif;
 	font-size: 55px;
-	margin: 60px 0px 0px;
+	margin: 150px 0px 0px;
+}
+
+/* body, general */
+body {
+	background-color: #202020;
+}
+
+/* footer */
+#colophon {
+	background-color: #000;
+	border: none;
+	margin: 0;
+	color: #fff;
+}
+
+/* footer row, full width */
+footer#colophon.row {
+	max-width: none;
 }
