--- a/style.css
+++ b/style.css
@@ -12,66 +12,104 @@
 /* import original theme */
  @import url("../mixfolio/style.css");
 
-/* ------------------------
- * OVERWRITE PARENT BELOW 
- * ------------------------
- */
-
 /* general */
-html, body {
+html, body 
+{
 	background-color: #101010;
 	height: 70% !important; /* fit to the page */
 	font-family: 'Times New Roman', serif;
 	color: #C8C8C8;
 }
 
+/* --------------
+ * HEADER
+ * --------------
+ */
+
+/* header */
+#branding-inner 
+{
+	background-color: #000;
+}
+
+/* menu row */
+#menu.row
+{
+	margin-top: 30px;
+}
+
+/* title row */
+#site-title.row
+{
+	margin-top: 120px;
+}
+
+/* top menu font */
+#menu h1 a 
+{
+	font-size: 15px;
+	color: #C8C8C8;
+}
+
+/* site title font (Man via Machine) */
+#site-title h1 a 
+{
+	font-size: 55px;
+	color: #C8C8C8;
+	float: right;
+}
+
+/* --------------
+ * BODY
+ * --------------
+ */
+
 /* front page body container */
-.main-outer {
+.main-outer 
+{
 	margin-top: 5em;
 	margin-bottom: 2em;
 }
 
 /* front page body */
-.entry-content p {
+.entry-content p 
+{
 	font-family: 'Mate SC', serif;
 	font-size: 20px;
 	margin-bottom: 2em;
 }
 
 /* front page image */
-img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img {
+img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img 
+{
 	border: none;
+	margin-bottom: 0;
 }
 
-/* header */
-#branding-inner {
-	background-color: #000;
-}
-
-/* header title (Man via Machine) */
-#branding h1 a {
-	font-size: 55px;
-	color: #C8C8C8;
-	float: right;
-	margin: 150px 0px 0px;
-}
+/* --------------
+ * FOOTER
+ * --------------
+ */
 
 /* footer */
-#colophon {
+#colophon 
+{
 	background-color: #000;
 	border: none;
 	margin: 0;
 }
 
 /* footer font */
-#colophon h6 {
+#colophon h6 
+{
 	color: #C8C8C8;
 	position: absolute;
 	right: 45%;
 }
 
 /* footer row, full width */
-footer#colophon.row {
+footer#colophon.row 
+{
 	max-width: none;
 /*	position: absolute;
 	bottom: -100%;
