--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@
 /* general */
 html, body 
 {
-	background-color: #000;
+	background-color: #121212;
 	height: 70% !important; /* fit to the page */
-	font-family: 'Times New Roman', serif;
-	color: #C8C8C8;
+	font-family: 'Lato', sans-serif;
+	font-weight: 100;
+	color: #c8c8c8;
 }
 
 /* --------------
@@ -31,13 +32,11 @@ html, body
 {
 	/* eliminate margin */
 	margin-bottom: 0;
-	/* header background for slide in purpose */
-	background-color: #101010;
 	/* sticky header */
 	position: fixed;
 	width: 100%;
 	/* transparent when scrolled */
-	opacity: 1;
+	opacity: 0.8;
 	/* always on top */
 	z-index: 999;
 }
@@ -50,26 +49,28 @@ h1
 /* header background for slide-in purpose */
 #branding-inner
 {
-	background-color: #000;
+	background-color: #121212;
 }
 
 /* menu row */
 #menu.row
 {
-	margin-top: 30px;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 /* title row */
 #site-title.row
 {
-	margin-top: 120px;
+	margin-top: 20px;
 }
 
 /* site menu text (About) */
 #menu h1 a
 {
+	font-weight: 300;
 	font-size: 15px;
-	color: #C8C8C8;
+	color: #c8c8c8;
 	padding: 0px 0px 0px 30px
 }
 
@@ -77,8 +78,8 @@ h1
 #site-title h1 a 
 {
 	font-size: 55px;
-	color: #C8C8C8;
-	float: right;
+	color: #c8c8c8;
+	float: left;
 	padding: 0px 20px 12px
 }
 
@@ -90,15 +91,15 @@ h1
 /* front page body container */
 .main-outer 
 {
-	background-color: #101010;
-	padding-top: 270px; /* for sticky header */
+	background-color: #161616;
+	padding-top: 170px; /* for sticky header */
 	padding-bottom: 2em;
 }
 
 /* front page body */
 .entry-content p 
 {
-	font-family: 'Mate SC', serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	margin-bottom: 2em;
 }
@@ -137,16 +138,16 @@ img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img
 /* title */
 #content .entry-header .entry-title
 {
-	color: #C8C8C8;
-	font-weight: lighter;
+	color: #c8c8c8;
+	font-weight: 100;
 	margin-bottom: 0;
 }
 
 /* post date */
 #content .entry-header .entry-date
 {
-	color: #606060;
-	font-weight: lighter;
+	color: #c8c8c8;
+	font-weight: 100;
 	font-size: 15px;
 	margin-bottom: 0;
 }
@@ -154,7 +155,8 @@ img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img
 /* content font */
 #content .entry-content p
 {
-	font-family: 'Times New Roman', serif;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
 	font-size: 17px;
 	letter-spacing: 0.05em;
 	line-height: 25px;
@@ -165,7 +167,7 @@ img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img
 /* sub-title */
 #content .entry-content h2
 {
-	color: #C8C8C8;
+	color: #c8c8c8;
 	font-size: 25px;
 	font-weight: lighter;
 }
@@ -173,7 +175,7 @@ img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img
 /* bullet list */
 #content .entry-content li
 {
-	font-family: 'Times New Roman', serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 17px;
 	letter-spacing: 0.05em;
 	line-height: 25px;
@@ -201,7 +203,7 @@ img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img
 /* font */
 #colophon h6 
 {
-	color: #C8C8C8;
+	color: #c8c8c8;
 	position: absolute;
 	right: 45%;
 }
