--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img
 {
 	color: #c8c8c8;
 	font-size: 25px;
-	font-weight: lighter;
+	font-weight: 300;
 }
 
 /* bullet list */
@@ -177,6 +177,7 @@ img[class*=align], img[class*=wp-image-], #content .gallery .gallery-icon img
 {
 	font-family: 'Lato', sans-serif;
 	font-size: 17px;
+	font-weight: 300;
 	letter-spacing: 0.05em;
 	line-height: 25px;
 	text-align: justify;
